load("@gazelle//:def.bzl", "gazelle", "gazelle_binary")

# gazelle:prefix github.com/bazel-gazelle/tests/bcr
gazelle_binary(
    name = "gazelle",
    languages = [
        "@gazelle_kotlin//gazelle/kotlin:kotlin",
        "@gazelle//language/go",
        "@gazelle//language/proto",
    ],
    visibility = ["//visibility:private"],
)
