module(
    name = "dir_find_and_replace",
    version = "0.0.1",
)

bazel_dep(name = "rules_kotlin", version = "1.9.6")
bazel_dep(name = "rules_jvm_external", version = "6.4")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

# When updating a dependency, run REPIN=1 bazel run @maven//:pin
maven.install(
    artifacts = [
        "com.google.truth:truth:1.1.2",
        "junit:junit:4.13.2",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    lock_file = "//:maven_install.json",
)

use_repo(maven, "maven")
