load("@rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")
load("@rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "hello_test",
    srcs = ["HelloWorldTest.kt"],
    test_class = "com.github.gonzojive.dirfindandreplace.hello.HelloWorldTest",
    deps = [
        "//src/main/kotlin/com/github/gonzojive/dirfindandreplace/hello",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)
